# lib/handler.js
@@ -8,12 +8,14 @@
 const i18 = require('i18next');
 const sprintf = require('i18next-sprintf-postprocessor');
 const Response = require('./response');
+const EvaluationResponse = require('./evaluation-response');
 const logger = require('./logger');
 const Conversation = require('watson-developer-cloud/conversation/v1');
 const Promise = require('bluebird');
 const fs = require('fs');
 const path = require('path');
 const async = require('async');
+const errors = require('./error-responses');
 
 
 const nluFolder = '/nlu';
@@ -35,65 +37,81 @@ Handler.prototype.initialize = function () {
     }
 };
 
-Handler.prototype.handleRequest = function (request, callback) {
+Handler.prototype.handleEvaluationRequest = function (request, callback) {
+    let evaluationResponse = new EvaluationResponse((err, result) => {
+        saveContext(this, request, context, evaluationResponse);
+        callback(err, evaluationResponse.response);
+    });
+    let context = createContext(request);
+    let state = this.state || 'DEFAULT';
+    do {
+        const action = this.states[state].actions['evaluation'] || undefined;
+        // Run action for pre-processing before the evaluation
+        if (!action) {
+            logger.error(errors.noEvaluationAction());
+            callback(errors.noEvaluationAction());
+        }
+        action(request, evaluationResponse, context);
+        this.state = evaluationResponse.state || this.state;
+        // Next state or stop (we have the response)
+        state = evaluationResponse.state;
+        // Clear, will be set by next action call.
+        delete evaluationResponse.state;
+    } while(state !== undefined)
+};
+
+Handler.prototype.evaluateRequest = function (request, evaluationResponse, context, callback) {
+    getIntent(this, request, (err, intentResult, output) => {
+        if (err) {
+            callback(evaluationResponse, context, err);
+        }
+        else {
+            let bin = [];
+            for (let intentity of intentResult) {
+                bin.push(intentity);
+            }
+            if(!request.attributes) {
+                request.attributes = {};
+            }
+            request.attributes.intent = sort(bin)[0].intents[0].intent;
+            evaluationResponse.response.intentConfidence = intentResult;
+            let textResponse;
+            if(output) {
+                context.skill = output.context ? output.context : {};
+                textResponse = output.text ? output.text : undefined;
+            }
+            callback(textResponse, evaluationResponse, context, undefined);
+
+        }
+    });
+
+};
+
+Handler.prototype.handleRequest = function (request, isEvaluationRequest = false, callback) {
     logger.info('Request', {request});
     // State and session context for short access
-    let skillContext = {};
-    if(request.context.session.skill && request.context.session.skill.attributes) {
-        skillContext = request.context.session.skill.attributes;
-    }
-    let context = {
-        utterance: request.context.application.attributes,
-        session: request.context.session.attributes,
-        skill: skillContext
-    };
+    let context = createContext(request);
     this.state = request.context.session.attributes.state;
     // Update language
     i18.changeLanguage(request.language);
-    let response = new Response((err, result) => {
-        request.context.session.attributes.state = this.state;
-        let sessionContext = {
-            skill: {
-                attributes: context.skill
-            },
-            attributes: context.session
-        };
-        // Returned context
-        Object.assign(response.response, {
-            context: {
-                application: request.context.application,
-                session: sessionContext
-            }
-        });
+    let response;
+    // callback function to be used by the response objects
+    let responseCallback = function (err, result) {
+        saveContext(this, request, context, response);
         // Log the response
         logger.info('Response', response.response);
         // Return the response
         callback(err, response.response);
-    });
+    };
+    response = new Response(responseCallback);
     // Handle intent
     try {
-        // Last state
-        let state = this.state || 'DEFAULT';
-        let intent = request.attributes.intent;
-        do {
-            // Get action from state
-            const action = this.states[state].actions[intent] ||
-                this.states[state].actions.unhandled;
-            // Run action
-            action(request, response, context);
-            // Update state
-            this.state = response.state || this.state;
-            // Next state or stop (we have the response)
-            state = response.state;
-            intent = response.intent || intent;
-            // Clear, will be set by next action call.
-            delete response.state;
-            delete response.intent;
-        } while (state !== undefined);
+        handleAction(this, request, response, context);
     } catch (err) {
-        callback('fail to run action or not exists');
+        callback(errors.invalidAction(request.attributes.intent));
     }
 };
+
 
 Handler.prototype.createActionsHandler = function (actions, state = 'DEFAULT') {
     return {
@@ -163,13 +181,19 @@ Handler.prototype.t = function (text) {
     return text;
 };
 
-Handler.prototype.getIntent = function (request, cb) {
+
+module.exports = Handler;
+
+
+let getIntent = function (self, request, cb) {
 
     // Build the order
     var tasks = [];
-    this.engines.forEach(nlu => {
+    let textOutput;
+    self.engines.forEach(nlu => {
         tasks.push(callback => {
-            nlu.process(request, (err, result) => {
+            nlu.process(request, (err, result, output) => {
+                textOutput = output;
                 callback(null, result);
             });
         });
@@ -177,9 +201,9 @@ Handler.prototype.getIntent = function (request, cb) {
     // Extract intent / entities and filter
     async.parallel(tasks, (err, results) => {
         results = results.filter(intentity => {
-            return this.filterIntent(request, intentity);
+            return filterIntent(self, request, intentity);
         });
-        cb(null, results);
+        cb(null, results, textOutput);
     });
 };
 
@@ -191,17 +215,17 @@ Handler.prototype.getIntent = function (request, cb) {
  * consider as such as the filtering doesn't mean extracting intent nor entities, just
  * filtering between intents.
  */
-Handler.prototype.filterIntent = function (request, intentity) {
+let filterIntent = function (self, request, intentity) {
     // If no intents
     if (intentity.intents.length === 0) {
         return false;
     }
     // Intent confidence must be above expertise threshold
-    if (intentity.getIntentConfidence() < this.manifest.threshold) {
+    if (intentity.getIntentConfidence() < self.manifest.threshold) {
         return false;
     }
     // Intents filtering
-    const intent = this.manifest.intents[intentity.getIntentName()];
+    const intent = self.manifest.intents[intentity.getIntentName()];
     if (intent !== undefined) {
         // Visibility check
         if (intent.visibility === 'hidden') {
@@ -220,7 +244,7 @@ Handler.prototype.filterIntent = function (request, intentity) {
     }
     return true;
 };
-module.exports = Handler;
+
 
 /**
  * sets up your WCS credentials, these will be used to access your
@@ -263,3 +287,77 @@ let callConversation = function (self, request, skillContext) {
     return self.conversation.messageAsync(payload);
 };
 
+
+let handleAction = function (self, request, response, context) {
+    let intent = request.attributes.intent;
+    let state = self.state || 'DEFAULT';
+    do {
+        // Get action from state
+        const action = self.states[state].actions[intent] ||
+            self.states[state].actions.unhandled;
+        // Run action
+        action(request, response, context);
+        // Update state
+        self.state = response.state || self.state;
+        // Next state or stop (we have the response)
+        state = response.state;
+        intent = response.intent || intent;
+        // Clear, will be set by next action call.
+        delete response.state;
+        delete response.intent;
+    } while (state !== undefined);
+};
+
+let createContext = function (request) {
+    let skillContext = {};
+    if (request.context.session.skill && request.context.session.skill.attributes) {
+        skillContext = request.context.session.skill.attributes;
+    }
+    return {
+        utterance: request.context.application.attributes,
+        session: request.context.session.attributes,
+        skill: skillContext
+    };
+};
+
+let saveContext = function (self, request, context, response) {
+    request.context.session.attributes.state = self.state;
+    let sessionContext = {
+        skill: {
+            attributes: context.skill
+        },
+        attributes: context.session
+    };
+    // Returned context
+    Object.assign(response.response, {
+        context: {
+            application: request.context.application,
+            session: sessionContext
+        }
+    });
+};
+
+
+/**
+ * Sort intents by confidence (per bin).
+ *
+ * @param  {object} bins [description]
+ * @return {promise}     [description]
+ */
+function sort(bin, compare) {
+    // Default compare by intent confidence
+    compare = compare || function (a, b) {
+        // Sort by confidence (highest first)
+        // If result is equal - prefer the last skill chosen (if exists)
+        let result = b.getIntentConfidence() - a.getIntentConfidence();
+        if (result === 0) {
+            return (b.previousExpertise);
+        } else {
+            return (result)
+        }
+    };
+
+    // Sort bins. Index 0 will be the top skill.
+    bin.sort(compare);
+    return (bin);
+}
